[package]
name = "adbc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "adbc-cli"
path = "src/main.rs"

[dependencies]
adbc_snowflake = { path = "../driver/snowflake" }
adbc_core.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
arrow-array.workspace = true
arrow-schema.workspace = true
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
snowflake-connector-rs = "0.7"
snowflake-api = "0.14"
serde_json = "1.0"

